--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@douyinfe/semi-next": "^2.12.0",
+    "@douyinfe/semi-ui": "^2.12.0",
+    "@semi-bot/semi-theme-volcano_engine": "^1.0.13",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "reset-css": "^5.0.1",
+    "sass": "^1.52.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
