--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "recoil": "^0.7.3",
     "reset-css": "^5.0.1",
     "sass": "^1.52.2",
     "swr": "^1.3.0"
