--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@douyinfe/semi-next": "^2.12.0",
     "@douyinfe/semi-ui": "^2.12.0",
     "@semi-bot/semi-theme-volcano_engine": "^1.0.13",
+    "@types/uuid": "^8.3.4",
+    "antd": "^4.21.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "moment": "^2.29.3",
@@ -21,7 +23,8 @@
     "recoil": "^0.7.3",
     "reset-css": "^5.0.1",
     "sass": "^1.52.2",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
