--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "@types/uuid": "^8.3.4",
     "antd": "^4.21.0",
     "axios": "^0.27.2",
+    "babel-plugin-superjson-next": "^0.4.3",
     "classnames": "^2.3.1",
     "moment": "^2.29.3",
     "next": "12.1.6",
+    "node-cache": "^5.1.2",
     "react": "18.1.0",
+    "react-aplayer": "^1.0.0",
     "react-dom": "18.1.0",
+    "react-live2d": "^1.0.31",
+    "react3dtagcloud_withclick": "^1.0.0",
     "recoil": "^0.7.3",
     "reset-css": "^5.0.1",
     "sass": "^1.52.2",
+    "superjson": "^1.9.1",
     "swr": "^1.3.0",
     "uuid": "^8.3.2"
   },
@@ -30,8 +36,15 @@
     "@types/node": "17.0.40",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "babel-plugin-import": "^1.13.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "module-alias": "^2.2.2",
     "typescript": "4.7.3"
+  },
+  "_moduleAliases": {
+    "@": ".",
+    "@@": "./components"
   }
 }
