--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.6",
     "@types/node": "17.0.40",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
@@ -40,6 +41,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "mockjs": "^1.1.0",
     "module-alias": "^2.2.2",
     "typescript": "4.7.3"
   },
