--- a/package.json
+++ b/package.json
@@ -17,15 +17,26 @@
     "axios": "^0.27.2",
     "babel-plugin-superjson-next": "^0.4.3",
     "classnames": "^2.3.1",
+    "markdown-navbar": "^1.4.3",
     "moment": "^2.29.3",
-    "next": "12.1.6",
+    "next": "^12.1.6",
+    "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
-    "react": "18.1.0",
+    "react": "^18.0.0-rc.3",
     "react-aplayer": "^1.0.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.0.0-rc.3",
     "react-live2d": "^1.0.31",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "react3dtagcloud_withclick": "^1.0.0",
     "recoil": "^0.7.3",
+    "rehype-highlight": "^5.0.2",
+    "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "remark-toc": "^8.0.1",
     "reset-css": "^5.0.1",
     "sass": "^1.52.2",
     "superjson": "^1.9.1",
