--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "@douyinfe/semi-next": "^2.12.0",
     "@douyinfe/semi-ui": "^2.12.0",
     "@semi-bot/semi-theme-volcano_engine": "^1.0.13",
+    "@types/lodash": "^4.14.186",
     "@types/uuid": "^8.3.4",
     "antd": "^4.21.0",
     "axios": "^1.1.2",
     "babel-plugin-superjson-next": "^0.4.3",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "markdown-navbar": "^1.4.3",
     "moment": "^2.29.3",
-    "next": "^12.1.6",
+    "next": "^12.3.1",
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
-    "react": "^18.0.0-rc.3",
+    "react": "^18.2.0",
     "react-aplayer": "^1.0.0",
-    "react-dom": "^18.0.0-rc.3",
+    "react-dom": "^18.2.0",
     "react-live2d": "^1.0.31",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
