--- a/package.json
+++ b/package.json
@@ -9,30 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytemd/plugin-gemoji": "^1.20.2",
+    "@bytemd/plugin-gfm": "^1.20.2",
+    "@bytemd/plugin-highlight": "^1.20.2",
+    "@bytemd/plugin-math": "^1.20.2",
+    "@bytemd/plugin-medium-zoom": "^1.20.2",
+    "@bytemd/react": "^1.20.2",
     "@douyinfe/semi-next": "^2.12.0",
     "@douyinfe/semi-ui": "^2.12.0",
     "@semi-bot/semi-theme-volcano_engine": "^1.0.13",
     "@types/lodash": "^4.14.186",
-    "@types/uuid": "^8.3.4",
-    "antd": "^4.21.0",
+    "@types/uuid": "^9.0.0",
+    "antd": "^5.1.6",
     "axios": "^1.1.2",
     "babel-plugin-superjson-next": "^0.4.3",
     "classnames": "^2.3.1",
+    "juejin-markdown-themes": "^1.29.5",
     "lodash": "^4.17.21",
     "markdown-navbar": "^1.4.3",
     "moment": "^2.29.3",
-    "next": "^12.3.1",
-    "next-transpile-modules": "^9.0.0",
+    "next": "^13.1.6",
+    "next-transpile-modules": "^10.0.0",
     "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-aplayer": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-live2d": "^1.0.31",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "react3dtagcloud_withclick": "^1.0.0",
     "recoil": "^0.7.3",
-    "rehype-highlight": "^5.0.2",
+    "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
@@ -42,21 +50,22 @@
     "reset-css": "^5.0.1",
     "sass": "^1.52.2",
     "superjson": "^1.9.1",
-    "swr": "^1.3.0",
-    "uuid": "^8.3.2"
+    "swr": "^2.0.3",
+    "turndown": "^7.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/mockjs": "^1.0.6",
-    "@types/node": "17.0.40",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "babel-plugin-import": "^1.13.5",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "mockjs": "^1.1.0",
     "module-alias": "^2.2.2",
-    "typescript": "4.7.3"
+    "typescript": "4.9.4"
   },
   "_moduleAliases": {
     "@": ".",
