--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@douyinfe/semi-ui": "^2.12.0",
     "@semi-bot/semi-theme-volcano_engine": "^1.0.13",
     "@types/lodash": "^4.14.186",
+    "@types/react-virtualized": "^9.21.21",
     "@types/uuid": "^9.0.0",
     "antd": "^5.1.6",
     "axios": "^1.1.2",
@@ -31,13 +32,14 @@
     "next": "^13.1.6",
     "next-transpile-modules": "^10.0.0",
     "node-cache": "^5.1.2",
-    "react": "^18.2.0",
+    "react": "18.0.0-rc.3",
     "react-aplayer": "^1.0.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.0.0-rc.3",
     "react-infinite-scroller": "^1.2.6",
     "react-live2d": "^1.0.31",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "react-virtualized": "^9.22.3",
     "react3dtagcloud_withclick": "^1.0.0",
     "recoil": "^0.7.3",
     "rehype-highlight": "^6.0.0",
